2016-08-25  Markus Gans  <guru.mail@muenster.de>
	* A new inherit background option for characters
	* Use inherit background for the simple shadows
	* Updating the transparent example program

2016-08-25  Markus Gans  <guru.mail@muenster.de>
	* Use the new transparent shadow option in drawShadow()

2016-08-21  Markus Gans  <guru.mail@muenster.de>
	* Improved transparent shadow background
	* Add "transparent" example to demonstrate transparency

2016-08-20  Markus Gans  <guru.mail@muenster.de>
	* Switch back to the own dialog when you closing a dialog menu
	* switchToPrevWindow() is looking for another window 
	  if no previous window was found

2016-08-14  Markus Gans  <guru.mail@muenster.de>
	* Screen characters now have a transparent 
	  and a transparent shadow option

2016-07-31  Markus Gans  <guru.mail@muenster.de>
	* Rename setUpdateVTerm to updateVTerm
	* Rename clrscr to clearArea
	* The widget clearing method updates now only non-covered 
	  characters on the virtual terminal.

2016-07-31  Markus Gans  <guru.mail@muenster.de>
	* Resetting the local window widget focus at 
	  the end of the lifetime of a widget.
	* Fix method setPos in the class FRect
	* Add the windows example to show the window behavior

2016-07-30  Markus Gans  <guru.mail@muenster.de>
	* Delete all callbacks from a widget with delCallbacks()
	* Remove dialog list item callback from the associated window

2016-07-28  Markus Gans  <guru.mail@muenster.de>
	* Improvements for the window focus

2016-07-24  Markus Gans  <guru.mail@muenster.de>
	* Add missing null pointer check in FOptiAttr before dereferencing
	* Remove callbacks and accelerator keys from FDialogListMenu
	  on closing of a dialog window
	* Execute accelerator keys only once
	* Improved window focus behavior

2016-07-23  Markus Gans  <guru.mail@muenster.de>
	* Add a modifier key correction for the linux tty
	* Support to read meta+enter from keyboard

2016-07-16  Markus Gans  <guru.mail@muenster.de>